--- a/templates/festival/admin_ops.html
+++ b/templates/festival/admin_ops.html
@@ -1,5 +1,5 @@
 {% extends "festival/base.html" %}
-{% block title %}Admin Ops - Festival Pizza{% endblock %}
+{% block title %}Admin Ops - Cipriano Festival{% endblock %}
 {% block content %}
 <section class="panel">
   <h1>Operaciones administrativas</h1>
