--- a/templates/festival/batches.html
+++ b/templates/festival/batches.html
@@ -1,5 +1,5 @@
 {% extends "festival/base.html" %}
-{% block title %}Lotes - Festival Pizza{% endblock %}
+{% block title %}Lotes - Cipriano Festival{% endblock %}
 {% block content %}
 <section class="panel">
   <h1>Generar lote del dia</h1>
