--- a/templates/festival/dashboard.html
+++ b/templates/festival/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "festival/base.html" %}
-{% block title %}Dashboard - Festival Pizza{% endblock %}
+{% block title %}Dashboard - Cipriano Festival{% endblock %}
 {% block body_class %}dashboard-page{% endblock %}
 {% block content %}
 <section class="panel">
