--- a/templates/festival/scan_station.html
+++ b/templates/festival/scan_station.html
@@ -1,5 +1,5 @@
 {% extends "festival/base.html" %}
-{% block title %}{{ title }} - Festival Pizza{% endblock %}
+{% block title %}{{ title }} - Cipriano Festival{% endblock %}
 {% block body_class %}station-page mode-{{ mode|lower }}{% endblock %}
 {% block content %}
 <section class="panel station-panel">
